Tagging jbossws-native-3.1.0.CR3